wordpress/base/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-wp
  namespace: wordpress
  labels:
    app: website-wp
spec:
  ports:
    - port: 80
  selector:
    app: website-wp
  type: LoadBalancer
