wordpress/base/wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: wordpress
  labels:
    app: website-wp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
#   tls:
#   - hosts:
#     - wordpress.hoanghd.fun
#     secretName: ssl-wordpress.hoanghd.fun
  ingressClassName: nginx
  rules:
    - host: wordpress.hoanghd.fun
      http:
        paths:
          - backend:
              service:
                name: website-wp
                port:
                  number: 80
            path: /
            pathType: Prefix
